--- a/vue-ui-docs/examples/pc-page/style/base.scss
+++ b/vue-ui-docs/examples/pc-page/style/base.scss
@@ -72,3 +72,9 @@ hr {
 input,button,a {
     outline:0 none !important;
 }
+#t_divBox{
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 99999999;
+}
